added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis rerum pariatur neque commodi velit, expedita iusto sed tempora nostrum totam fugiat, at rem quae fugit soluta repudiandae sunt itaque aliquam possimus voluptate amet. Hic, quaerat quo at aspernatur facilis quisquam blanditiis! Inventore recusandae amet, aut odio saepe fugit similique quo?</p>
+    </div>
+
 </body>
 </html>
