--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis rerum pariatur neque commodi velit, expedita iusto sed tempora nostrum totam fugiat, at rem quae fugit soluta repudiandae sunt itaque aliquam possimus voluptate amet. Hic, quaerat quo at aspernatur facilis quisquam blanditiis! Inventore recusandae amet, aut odio saepe fugit similique quo?</p>
+    </div>
+    <div>
+        <h3>My second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis rerum pariatur neque commodi velit, expedita iusto sed tempora nostrum totam fugiat, at rem quae fugit soluta repudiandae sunt itaque aliquam possimus voluptate amet. Hic, quaerat quo at aspernatur facilis quisquam blanditiis! Inventore recusandae amet, aut odio saepe fugit similique quo?</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis rerum pariatur neque commodi velit, expedita iusto sed tempora nostrum totam fugiat, at rem quae fugit soluta repudiandae sunt itaque aliquam possimus voluptate amet. Hic, quaerat quo at aspernatur facilis quisquam blanditiis! Inventore recusandae amet, aut odio saepe fugit similique quo?</p>
     </div>
 
