added a list to push code in the github

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis rerum pariatur neque commodi velit, expedita iusto sed tempora nostrum totam fugiat, at rem quae fugit soluta repudiandae sunt itaque aliquam possimus voluptate amet. Hic, quaerat quo at aspernatur facilis quisquam blanditiis! Inventore recusandae amet, aut odio saepe fugit similique quo?</p>
     </div>
-
+    <div>
+        <h3>How to push incremental code</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit massage"</li>
+            <li>git push</li>
+        </ol>
+    </div>
 </body>
 </html>
